Some big updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
     <div class="zone">
         <p></p>
-        <a href="/teams"><button class="sport-button">Current Team Selector</button></a>
+        <a href="/graphic_manager"><button class="sport-button">Current Team Selector</button></a>
         <a href="/team"><button class="sport-button">Current Team</button></a>
 
         <p></p>
